--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ rustyline = "10.0.0"
 rustyline-derive = "0.7.0"
 lazy_static = "1.4.0"
 eframe = "0.20.1"
+clap = { version = "4.0.32", features = ["derive"] }
+
