--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,9 @@ regex = "1.7.0"
 rustyline = "10.0.0"
 rustyline-derive = "0.7.0"
 lazy_static = "1.4.0"
-eframe = "0.20.1"
+eframe = "0.14"
 clap = { version = "4.0.32", features = ["derive"] }
+egui_nodes = "0.1.3"
 
 [[bin]]
 name = "em"
