--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ rustyline-derive = "0.7.0"
 lazy_static = "1.4.0"
 eframe = "0.20.1"
 clap = { version = "4.0.32", features = ["derive"] }
+egui_node_graph = "0.4.0"
 
 [[bin]]
 name = "em"
