--- a/gui/sdl_metal/Makefile
+++ b/gui/sdl_metal/Makefile
@@ -1,15 +1,17 @@
 EXE = exomem
 IMGUI_DIR = ../imgui
+IMNODES_DIR = ../imnodes
 SOURCES = main.mm
 SOURCES += $(IMGUI_DIR)/imgui.cpp $(IMGUI_DIR)/imgui_draw.cpp $(IMGUI_DIR)/imgui_tables.cpp $(IMGUI_DIR)/imgui_widgets.cpp
 SOURCES += $(IMGUI_DIR)/backends/imgui_impl_sdl.cpp $(IMGUI_DIR)/backends/imgui_impl_metal.mm
+SOURCES += $(IMNODES_DIR)/imnodes.cpp
 OBJS = $(addsuffix .o, $(basename $(notdir $(SOURCES))))
 
 LIBS = -framework Metal -framework MetalKit -framework Cocoa -framework IOKit -framework CoreVideo -framework QuartzCore
 LIBS += $(shell pkg-config --libs sdl2)
 LIBS += -L/usr/local/lib
 
-CXXFLAGS = -std=c++11 -I$(IMGUI_DIR) -I$(IMGUI_DIR)/backends -I/usr/local/include
+CXXFLAGS = -std=c++11 -I$(IMGUI_DIR) -I$(IMGUI_DIR)/backends -I$(IMNODES_DIR) -I/usr/local/include
 CXXFLAGS += $(shell pkg-config --cflags sdl2)
 CXXFLAGS += -Wall -Wformat
 CFLAGS = $(CXXFLAGS)
@@ -21,6 +23,9 @@ CFLAGS = $(CXXFLAGS)
 	$(CXX) $(CXXFLAGS) -c -o $@ $<
 
 %.o:$(IMGUI_DIR)/backends/%.cpp
+	$(CXX) $(CXXFLAGS) -c -o $@ $<
+
+%.o:$(IMNODES_DIR)/%.cpp
 	$(CXX) $(CXXFLAGS) -c -o $@ $<
 
 %.o:%.mm
