--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,12 @@ edition = "2021"
 eframe = "0.25.0"
 egui_plot = "0.25.0"
 fdg-sim = "0.9.1"
+glob = "0.3.1"
+itertools = "0.12.0"
+lazy_static = "1.4.0"
+regex = "1.10.2"
+scraper = "0.18.1"
+ureq = "2.9.1"
 
 # NOUSE begin: see ideas
 # [[bin]]
